--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 This Bachelor Thesis offers the prototype of a user data tracking service on a web app. This service is embedded in the JavaScript of the HTML-Pages 
-Aufgabe1, Aufgabe2, Aufgabe3, which are called script1, script2 and script3 respectively. The pages were serves using Python Flask.
+Aufgabe1, Aufgabe2, Aufgabe3, which are called script1, script2 and script3 respectively. The pages were serves using Python Flask. The tracking service
+is planned as the first step towards the development a user assistance system. Please refer to the Abstract of the Bachelor Thesis for a more detailed
+depictionof the task.
