--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-This Bachelor Thesis offers the prototype of a user data tracking service on a web app. This service is embedded in the JavaScript of the HTML-Pages 
-Aufgabe1, Aufgabe2, Aufgabe3, which are called script1, script2 and script3 respectively. The pages were serves using Python Flask. The tracking service
-is planned as the first step towards the development a user assistance system. Please refer to the Abstract of the Bachelor Thesis for a more detailed
-depictionof the task.
+This Bachelor Thesis offers the prototype of a user data tracking service on a web app called meinDorf55+. For this purpose, a clone of the said webpage 
+was produced and a tracking service was developed and embedded in the clone's script. There are three identical examples of the cloned Page: 
+Aufgabe1, Aufgabe2, Aufgabe3, their javascripts are called script1, script2 and script3 respectively. For Validation purposes the cloned page and its embedded
+tracking service was tested on participants who were offered three tasks to perform on the cloned webpage. This is why there are 3 identical pages. The pages
+were serves using Python Flask. The offered tracking service is planned as the first step towards the development a user assistance system. Please refer to the 
+Bachelor Thesis for a more detailed depiction of the task.
